src/ceal/tests/neg2/151.gold
Error: (line 5:6 '.def') Macro definition cannot follow labels
