src/ceal/tests/neg2/151.sct
# label on def

.aaa

bbb: .def aaa
0 0 (-1)
.end


